# user

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  regression.py  setup.py
docs/: campaign10.ipynb  campaign11.ipynb  campaign12.ipynb  campaign13.ipynb  campaign14.ipynb  campaign15.ipynb  campaign16.ipynb  campaign17.ipynb  campaign18.ipynb  campaign19.ipynb  campaign2.ipynb  campaign20.ipynb  campaign3.ipynb  campaign4.ipynb  campaign5.ipynb  campaign6.ipynb  campaign7.ipynb  campaign8.ipynb  campaign9.ipynb  commands.rst  compatibility.rst  conf.py  data.ipynb  dependencies.rst  getting-started.ipynb  index.rst  installation.rst  limbo.cli.compress.rst  limbo.cli.lint.rst  limbo.cli.materialize.rst  limbo.cli.rst  limbo.cli.stats.rst  limbo.data.rst  limbo.rst  limbo.samlab.rst  models.ipynb  ref-2.ipynb  ref.ipynb  reference.rst  release-notes.rst  (+5 more)
docs/data/: cryptomatte_0000000.cryptomatte.exr  cryptomatte_0000000.exr  cryptomatte_0000025.cryptomatte.exr  cryptomatte_0000025.exr  cryptomatte_0001785.cryptomatte.exr  cryptomatte_0001785.exr  image_0000000.exr  image_0000000.json  image_0000025.exr  image_0000025.json  image_0001785.exr  image_0001785.json  image_0014.json
docs/user-guide/: Object_Detection.ipynb  adversarial.ipynb  camera.ipynb  cameras.ipynb  classification.ipynb  compression.ipynb  depth.ipynb  getting-started.ipynb  object-detection.ipynb  specification.rst
features/: documentation.feature
features/steps/: administrivia.py  documentation.py
limbo/: __init__.py  data.py  samlab.py
limbo/cli/: __init__.py  compress.py  lint.py  materialize.py  stats.py
notebooks/: materialize-bounds.ipynb  materialize-images.ipynb
